# AV_LunchBox_StickerPDF

./: .coverage  .gitignore  QUICK_COMMANDS.md  README.md  pyproject.toml  setup.py  update_template.py  update_template_gui.py  update_template_gui.spec
.github/workflows/: generate_pdf.yml  lunch-pdf.yml  lunch-summary.yml
Templates/: AR_Template.docx
av_lunchbox_stickerpdf/: __init__.py
av_lunchbox_stickerpdf/cli/: __init__.py  main.py
av_lunchbox_stickerpdf/config/: __init__.py  (+2 more)
docs/: 00_DOCUMENTATION_INDEX.md  01_QUICK_START.md  08_PROJECT_STRUCTURE.md  CLEANUP_FEATURE.md  DOCUMENTATION_COMPLETE.md  FINAL_FIX_SUMMARY.md  GETTING_STARTED.md  GOOGLE_SHEETS_GUIDE.md  GOOGLE_SHEETS_INTEGRATION.md  PROJECT_STRUCTURE.md  README.md  README_COMPLETE.md  README_MAC.md  REFACTORING_ANALYSIS.md  REFACTORING_SUMMARY.md  RESTRUCTURING_COMPLETE.md  RESTRUCTURING_SUMMARY.md  SHEETS_API_REFERENCE.md  SHEETS_VS_OCR.md  TROUBLESHOOTING.md
exports/: 2026-02-10_12:12 PM.txt
md files/: CHANGES_SUMMARY.md  DATA_ALIGNMENT_FIX.md  FIX_EXPLANATION.md  NAME_EXTRACTION_FIX.md  QUICK_REFERENCE.md  README_FINAL.md  TROUBLESHOOTING.md
src/: generate_pdf.py  generate_pdf_wrapper.py  google_sheets_handler.py  pdf_generator_gui.py  requirements.txt  send_lunch_email.py  send_whatsapp.py  setup.sh  sheets_extractor.py  summary_generator.py  update_template.py
tests/: advanced_diagnostic.py  analyze_sheet_structure.py  debug_dates.py  debug_names.py  debug_ocr.py  find_29_columns.py  test_config.py  test_extraction.py  test_file_utils.py  test_markers.py  test_models.py  test_order_extractor.py  test_sheets.py  test_summary.py  test_summary_generation.py
(+44 files in other folders)
